Use valueOf() for boxed primitives